# svc

./: .gitignore  _in  _out_svc  _svc_in  _svc_out  pyproject.toml  run.sh  ui.py
