[tool.poetry]
name = "svc"
version = "0.1.0"
description = ""
authors = ["Sway Ducky <swayducky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
flask = "^2.2.3"
flask-cors = "^3.0.10"
gradio = "^3.27.0"
numpy = "1.23.5"
numba = "0.56.4"
pyworld = "0.3.0"
scipy = "1.10.1"
soundfile = "0.12.1"
torch = "1.13.1"
torchaudio = "0.13.1"
tqdm = "^4.65.0"
scikit-maad = "^1.3.12"
praat-parselmouth = "^0.4.3"
onnx = "^1.13.1"
onnxsim = "^0.4.19"
onnxoptimizer = "^0.3.10"
fairseq = "0.12.2"
librosa = "0.8.1"
tensorboard = "^2.12.2"
pyqt5 = "^5.15.9"
huggingface-hub = "^0.13.4"
datasets = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
